
8.16  2019-05-14
  - Fixed getopt function in Mojo::Util to behave more like GetOptionsFromArray.
    (jberger, reneeb)

8.15  2019-04-26
  - Updated jQuery to version 3.4.0.
  - Improved wait method in Mojo::Promise not to be affected by manually stopped
    event loops. (Grinnz)
  - Fixed a bug where the new method in Mojo::Promise could not be passed a
    callback to wrap continuation-passing style APIs, which is incompatible with
    the JavaScript API.

8.14  2019-04-18
  - Added EXPERIMENTAL timer method to Mojo::Promise.
  - Added header_exists and header_exists_not methods to Test::Mojo.
  - Fixed a bug where the finally callback in Mojo::Promise was passed a value,
    which is incompatible with the JavaScript API.
  - Fixed a bug in Mojo::Promise where the finally method could change promise
    values.
  - Fixed a merge bug in Mojo::Parameters where multiple values sharing the same
    name could get lost.

8.13  2019-03-21
  - Added EXPERIMENTAL map method to Mojo::Promise. (jberger)
  - Added EXPERIMENTAL min_compress_size attribute to Mojolicious::Renderer.
    (CandyAngel, mjemmeson)
  - Improved the security of signed cookies by also signing the cookie name.
    Note that this means that all sessions will be reset.
  - Fixed Mojo::IOLoop::Server to not check if listen sockets are writable.

8.12  2019-01-27
  - Added EXPERIMENTAL timeout method to Mojo::Promise. (batman)
  - Removed deprecated module Mojolicious::Plugin::PODRenderer.
  - Removed deprecated method mojo_lib_dir from Mojo::Home.
  - Fixed rare warning in Mojo::Log. (Grinnz)

8.11  2019-01-01
  - Added EXPERIMENTAL support for SameSite cookies to better protect
    Mojolicious applications from CSRF attacks. (dylanwh, sri)
  - Added EXPERIMENTAL samesite attributes to Mojo::Cookie::Response and
    Mojolicious::Cookies. (dylanwh, sri)
  - Added lstat method to Mojo::File. (Grinnz)
  - Added remove method to Mojo::File.
  - Improved eval command with support for promises. (jberger)