@@ -243,4 +243,13 @@ ok $headers->is_finished, 'parser is finished';
 is $headers->content_type, 'text/plain', 'right value';
 is $headers->header('X-Bender'), 'Bite my shiny, metal ass!', 'right value';
 
+# Invalid characters
+$headers = Mojo::Headers->new;
+eval { $headers->add(Foo => "test\x0a") };
+like $@, qr/Invalid characters in Foo header/, 'right error';
+eval { $headers->add(Foo => "test\x0d") };
+like $@, qr/Invalid characters in Foo header/, 'right error';
+eval { $headers->add(Foo => "\x0atest") };
+like $@, qr/Invalid characters in Foo header/, 'right error';
+
 done_testing();
